--- a/src/classes/DB_GenericDml.cls
+++ b/src/classes/DB_GenericDml.cls
@@ -1,5 +1,5 @@
-public class DB_GenericDml {
-    public void doInsert(List<SObject> objectList) {
+public virtual class DB_GenericDml {
+    public virtual void doInsert(List<SObject> objectList) {
     	insert objectList;
     }
 }
