--- a/src/classes/DB_EquipmentDmlMock.cls
+++ b/src/classes/DB_EquipmentDmlMock.cls
@@ -1,5 +1,5 @@
-@isTest
-public class TEST_FakeEquipmentDml extends DB_EquipmentDml {
+@isTest 
+public class DB_EquipmentDmlMock extends DB_EquipmentDml { 
 	public List<Product2> updatedEquipmentList {private set; get;}
 	
 	public override Database.UpsertResult[] doUpsertUsingSkuAsExternalKey(List<Product2> updatedEquipmentList){
