--- a/src/classes/DB_GenericDmlMock.cls
+++ b/src/classes/DB_GenericDmlMock.cls
@@ -1,5 +1,5 @@
-@isTest
-public class TEST_FakeGenericDml extends DB_GenericDml {
+@isTest 
+public class DB_GenericDmlMock extends DB_GenericDml { 
 	public List<SObject> insertedSObjectList {private set; get;}
 	
     public override void doInsert(List<SObject> objectList) {
