--- a/src/classes/HTTP_TestRestfulCalloutMock.cls
+++ b/src/classes/HTTP_TestRestfulCalloutMock.cls
@@ -1,15 +1,21 @@
 @isTest
 global class HTTP_TestRestfulCalloutMock implements HttpCalloutMock {
 	Integer statusCode;
+	String body;
 	
-	global HTTP_TestRestfulCalloutMock(Integer statusCode) {
+	global HTTP_TestRestfulCalloutMock(Integer statusCode, String body) {
 		this.statusCode = statusCode;
+		this.body = body;
+	}
+
+	global HTTP_TestRestfulCalloutMock(Integer statusCode) {
+		this(statusCode, '{"status":"success"}');
 	}
 	
     global HttpResponse respond(HttpRequest request) {
     	HttpResponse response = new HttpResponse();
     	response.setHeader('Content-Type', 'application/json');
-    	response.setBody('{"status":"success"}');
+    	response.setBody(this.body);
     	response.setStatusCode(this.statusCode);
     	return response;
     }
