--- a/src/classes/WarehouseCalloutService.cls
+++ b/src/classes/WarehouseCalloutService.cls
@@ -1,4 +1,4 @@
-public with sharing class WarehouseCalloutService {
+public with sharing virtual class WarehouseCalloutService {
     private static final String WAREHOUSE_URL = 'https://th-superbadge-apex.herokuapp.com/equipment';
     
 	HWR_WarehouseCalloutStrategy warehouseCalloutStrategy;
@@ -11,14 +11,12 @@ public with sharing class WarehouseCalloutService {
 		this(new HWR_WarehouseCalloutStrategy(WAREHOUSE_URL));
 	}
 
-    // complete this method to make the callout (using @future) to the
-    // REST endpoint and update equipment on hand.
     @future(callout=true)
     public static void runWarehouseEquipmentSync(){
         (new WarehouseCalloutService()).syncEquipment();
     }
     
-    private void syncEquipment() {
+    public virtual void syncEquipment() {
     	this.warehouseCalloutStrategy.execute();
     }
 
