--- a/src/classes/WarehouseCalloutServiceTest.cls
+++ b/src/classes/WarehouseCalloutServiceTest.cls
@@ -1,4 +1,22 @@
 @isTest
 private class WarehouseCalloutServiceTest {
-  // implement your mock callout test here
+	private static final User TestRunner = TEST_RunAsUserFactory.create(); 
+
+	@isTest static void testRunWarehouseEquipmentSync(){
+		// Arrange
+        Test.setMock(HttpCalloutMock.class, new WarehouseCalloutServiceMock()); 
+		
+		// Act  
+        System.runAs(TestRunner){
+            Test.startTest(); 
+            { 
+		        WarehouseCalloutService.runWarehouseEquipmentSync();
+            }
+            Test.stopTest();
+        } 
+
+		// Assert
+        System.assertEquals(1, [SELECT count() FROM Product2]);        
+    }
+    
 }
