--- a/src/classes/WarehouseSyncSchedule.cls
+++ b/src/classes/WarehouseSyncSchedule.cls
@@ -1,16 +1,16 @@
 global class WarehouseSyncSchedule implements Schedulable {
-  // implement scheduled code here
+
 	global void execute(SchedulableContext schedulableContext) {
 		WarehouseCalloutService.runWarehouseEquipmentSync();
 	}
 	
-	public static void scheduleMorningRun() {
+	public static Id scheduleMorningRun() {
 		Integer pstTargetHour = 1; // 24 hour time
 		Integer pstOffset = -8;
 		Integer userOffset = UserInfo.getTimeZone().getOffset(Date.today());
-		Integer userTime = pstTargetHour - pstOffset + userOffSet; 
+		Integer userTime = Math.mod(pstTargetHour - pstOffset + userOffSet, 24);  
 		
 		String schedule = '0 0 ' + userTime + ' * * ?';
-		System.schedule('Warehouse Sync', schedule, new WarehouseSyncSchedule());
+		return System.schedule('Warehouse Sync', schedule, new WarehouseSyncSchedule());
 	}
 }
